fetch current & 5 day forecast now done

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main>
         <div class="search-sec">
             <h2>Seach for a City:</h2>
-            <input id="search" placeholder="City Name" autofocus>
+            <input type="text" id="search" placeholder="City Name" autofocus autocomplete="off">
             <button id="submit-btn">Search</button>
             <button id="clear-btn">Clear History</button>
             <hr>
@@ -28,8 +28,11 @@
 
         <div class="weather-container">
             <div id="todays-weather">
-                <h2>01/04/2023</h2> 
-                <i>icon</i>
+                <div class="title">
+                    <h1>Sydney (01/04/2023)</h2> 
+                    <img class="icon">icon</img>
+                </div>
+
                 <p>Temp: </p>
                 <p>Wind: </p>
                 <p>Humidity: </p>
@@ -37,35 +40,35 @@
             <div id="future-container">
                 <div class="weather-card">
                     <h2>01/04/2023</h2>
-                    <i>icon</i>
+                    <img class="icon">icon</img>
                     <p>Temp: </p>
                     <p>Wind: </p>
                     <p>Humidity: </p>
                 </div>
                 <div class="weather-card">
                     <h2>01/04/2023</h2>
-                    <i>icon</i>
+                    <img class="icon">icon</img>
                     <p>Temp: </p>
                     <p>Wind: </p>
                     <p>Humidity: </p>
                 </div>
                 <div class="weather-card">
                     <h2>01/04/2023</h2>
-                    <i>icon</i>
+                    <img class="icon">icon</img>
                     <p>Temp: </p>
                     <p>Wind: </p>
                     <p>Humidity: </p>
                 </div>
                 <div class="weather-card">
                     <h2>01/04/2023</h2>
-                    <i>icon</i>
+                    <img class="icon">icon</img>
                     <p>Temp: </p>
                     <p>Wind: </p>
                     <p>Humidity: </p>
                 </div>
                 <div class="weather-card">
                     <h2>01/04/2023</h2>
-                    <i>icon</i>
+                    <img class="icon">icon</img>
                     <p>Temp: </p>
                     <p>Wind: </p>
                     <p>Humidity: </p>
